fixes mobile menu z-index

--- a/assets/src/css/components/menu.pcss
+++ b/assets/src/css/components/menu.pcss
@@ -7,7 +7,7 @@
 }
 
 .main-menu.mobile {
-  @apply block absolute bg-gray-100 right-0 left-0 p-4 shadow-lg border-t-4 border-primary;
+  @apply block absolute bg-gray-100 right-0 left-0 p-4 shadow-lg border-t-4 border-primary z-10;
   top: calc(100% + .75rem);
   .menu-item{
     @apply block border-b-2 py-2;
